--- a/.github/workflows/Cherry-pick-via-comment.yml
+++ b/.github/workflows/Cherry-pick-via-comment.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0  # 获取完整历史记录，cherry-pick需要
+          fetch-depth: 0 # 获取完整历史记录，cherry-pick需要
 
       - name: Setup Git
         run: |
@@ -62,43 +62,44 @@ jobs:
           # 构建正确的API URL
           API_URL="https://api.github.com/repos/$REPO/pulls/$PR_NUMBER"
           echo "API URL: $API_URL"
-          
+
           # 使用GitHub API获取已合并PR的信息，并捕获HTTP状态码
           response=$(curl -s -w "\nHTTP_STATUS:%{http_code}" -H "Authorization: token $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             "$API_URL")
-          
+
           # 提取HTTP状态码
           http_status=$(echo "$response" | grep 'HTTP_STATUS:' | cut -d':' -f2)
           # 提取响应体
           response_body=$(echo "$response" | sed '/HTTP_STATUS:/d')
-          
+
           # 输出调试信息
           echo "HTTP状态码: $http_status"
           echo "响应体预览: $(echo "$response_body" | cut -c1-100) ..."
-          
+
           # 检查API调用是否成功
           if [[ "$http_status" != "200" ]]; then
             echo "错误：API调用失败，状态码: $http_status"
             echo "详细错误: $response_body"
             exit 1
           fi
-          
+
           # 提取合并提交SHA
           merge_commit_sha=$(echo "$response_body" | grep -o '"merge_commit_sha":"[^"]*' | cut -d'"' -f4)
-          
-          # 检查PR状态
+
+          # 检查PR状态 - 使用更安全的方式提取JSON值
           pr_state=$(echo "$response_body" | grep -o '"state":"[^"]*' | cut -d'"' -f4)
-          is_merged=$(echo "$response_body" | grep -o '"merged":[^"*' | cut -d':' -f2 | tr -d ' ')  
-          
+          # 修复正则表达式错误
+          is_merged=$(echo "$response_body" | grep -o '"merged":[[:space:]]*\(true\|false\)' | cut -d':' -f2 | tr -d ' ')
+
           echo "PR状态: $pr_state"
           echo "是否已合并: $is_merged"
-          
+
           if [ -z "$merge_commit_sha" ] || [[ "$is_merged" != "true" ]]; then
             echo "错误：PR未合并或无法获取合并提交SHA"
             exit 1
           fi
-          
+
           echo "合并提交SHA: $merge_commit_sha"
           echo "commit_sha=$merge_commit_sha" >> $GITHUB_OUTPUT
 
@@ -111,7 +112,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           created_prs=""
-          
+
           for branch in $TARGET_BRANCHES; do
             echo "处理分支: $branch"
             
@@ -157,7 +158,7 @@ jobs:
             # 回到初始状态
             git checkout -
           done
-          
+
           # 输出创建PR列表
           if [ -n "$created_prs" ]; then
             echo "pr_list=$created_prs" >> $GITHUB_OUTPUT
@@ -175,7 +176,7 @@ jobs:
           else
             comment="❌ Cherry-pick 操作未创建任何PR，请检查目标分支是否存在或是否有冲突。"
           fi
-          
+
           curl -s -X POST -H "Authorization: token $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/${{ github.repository }}/issues/$PR_NUMBER/comments" \
